ch09/cafe-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffee-tea
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "coffee.myweb.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
  - host: "tea.myweb.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tea-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-water
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.myweb.com
    http:
      paths:
      - path: /juice
        pathType: Prefix
        backend:
          service:
            name: juice-svc
            port:
              number: 80
      - path: /water
        pathType: Prefix
        backend:
          service:
            name: water-svc
            port:
              number: 80
