ch09/cafe-tls-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-water-tls
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.myweb.com
    secretName:  www-myweb-com-tls
  rules:
  - host: www.myweb.com
    http:
      paths:
      - path: /juice
        pathType: Prefix
        backend:
          service:
            name: juice-svc
            port:
              number: 80
      - path: /water
        pathType: Prefix
        backend:
          service:
            name: water-svc
            port:
              number: 80
